# FourConnectXtreme

./: readme.md
clients/cpp/: CMakeLists.txt  README.md  dependencies.cmake  project_options.cmake
clients/cpp/cmake/: warnings.cmake
clients/cpp/src/: CMakeLists.txt
clients/cpp/src/bot/: CMakeLists.txt  base_bot.hpp  main.cpp
clients/cpp/src/client/: CMakeLists.txt  client.cpp  web_socket.hpp
clients/cpp/src/client/include/client/: client.hpp  play_state.hpp
clients/csharp/: .gitignore  readme.md
clients/csharp/Bots/: Bomb.cs  Bots.csproj  MyAi.cs  PlayState.cs  RandomAi.cs
clients/csharp/Client/: Connect4WebsocketClient.cs  CsharpClient.csproj  Program.cs
clients/dart/: custom_websocket_client.dart  main.dart  play_state.dart  pubspec.yaml  readme.md
clients/dart/bots/: ai_factory.dart  bot_ai.dart  my_ai.dart  random_ai.dart
clients/dart/model/: bomb.dart
clients/go/: README.md
clients/go/cmd/: main.go
clients/java/: .gitignore  build.gradle  readme.md  settings.gradle
clients/kotlin/: .gitignore  build.gradle.kts  readme.md  settings.gradle.kts
clients/php/: README.md  bot.php  composer.json
clients/php/src/: Bomb.php  Bot.php  Client.php  PlayState.php
clients/python/: .gitignore  bot.py  readme.md
clients/python/Bots/: aiFactory.py  bot_ai.py  data.py  my_ai.py  random_ai.py
clients/rust/: Cargo.toml  README.MD
clients/rust/four_connect_bot/: Cargo.toml
clients/rust/four_connect_bot/src/: main.rs
clients/rust/four_connect_lib/: Cargo.toml
clients/rust/four_connect_lib/src/: error.rs  lib.rs
clients/typescript/: README.md  package-lock.json  package.json
clients/typescript/src/: index.ts
game/: .gitignore  default_bus_layout.tres  icon.svg.import  project.godot
game/assets/graphics/: Backgound.png.import  Title.png.import  background_pixelart.png.import  board_bottom.png.import  board_bottom_left.png.import  board_bottom_right.png.import  bomb.png.import  bombs.png.import  bombs2.png.import  coin_green.png.import  coin_red.png.import  coins_green.png.import  coins_red.png.import  explode.png.import  fast.png.import  game_field.png.import  game_field_bottom.png.import  game_field_left.png.import  game_field_left_bottom.png.import  game_field_right.png.import  game_field_right_bottom.png.import  pause.png.import  play.png.import  wall.png.import
game/assets/sounds/: Gamemusik.mp3.import  Summarymusik.mp3.import  Titelmusik.mp3.import  bomb_dropped.mp3.import  bomb_explosion.mp3.import  bomb_falling.mp3.import  chip_destroyed.mp3.import  chip_dropped.mp3.import  chip_movement.mp3.import
game/global/: designer.gd  designer.gd.uid  game_manager.gd  game_manager.gd.uid  static_background.tscn  websocket_server.gd  websocket_server.gd.uid
game/scenes/game/: board.gd  board.gd.uid  board.tscn  bomb.gd  bomb.gd.uid  bomb.tscn  coin.gd  coin.gd.uid  coin.tscn  coin_hover.gd  coin_hover.gd.uid  game.gd  (+2 more)
(+53 files in other folders)
